Bug 997353 - Make powerpc not use static page sizes in mozjemalloc. r=njn a=jcristau

Summary: __powerpc__ covers powerpc and powerpc64.

Reviewers: njn

Reviewed By: njn

Bug #: 997353

Differential Revision: https://phabricator.services.mozilla.com/D33750